--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,16 @@
-*{
-  padding :0;
-  margin :0;
+* {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+.content {
+  height: 80vh;
+}
+
+.resgister-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
 }
